--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ iframe{
       <i class="bi bi-bell-fill"></i> VIP ALARM
     </a>
 
-    <a onclick="loadPage(this,'DashboardVIP.html')">
+    <a onclick="loadPage(this,'celldown.html')">
       <i class="bi bi-speedometer2"></i> CELL DOWN
     </a>
 
