--- a/celldown.html
+++ b/celldown.html
@@ -82,7 +82,7 @@ body{
 
 <!-- HEADER -->
 <div class="header-bar">
-  <h5 class="m-0"><i class="fas fa-tower-cell me-2"></i>VIP Alarms Dashboard - Cell Down</h5>
+  <h5 class="m-0"><i class="fas fa-tower-cell me-2"></i>Dashboard JABO - Cell Down</h5>
   <div>
     <span id="lastUpdate"><i class="fas fa-clock me-1"></i> Loading...</span>
     <button class="btn btn-sm btn-light ms-2" onclick="loadData()">
@@ -535,4 +535,5 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </body>
 </html>
+
 
