--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>ANDI AUTOMATION</title>
+<title>DASHBOARD JABO</title>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -82,7 +82,7 @@ iframe{
 
   <!-- SIDEBAR -->
   <div class="sidebar">
-    <div class="title">ANDI AUTOMATION</div>
+    <div class="title">DASHBOARD JABO</div>
 
     <a class="active" onclick="loadPage(this,'vipalarm.html')">
       <i class="bi bi-bell-fill"></i> VIP ALARM
@@ -96,7 +96,7 @@ iframe{
       <i class="bi bi-diagram-3"></i> SITE DOWN
     </a>
 
-    <div class="footer">AMS Prod</div>
+    <div class="footer">AMSProd</div>
   </div>
 
   <!-- CONTENT -->
