Replace 'DARK MODE' link with 'SITE DOWN'

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ iframe{
       <i class="bi bi-speedometer2"></i> CELL DOWN
     </a>
 
-    <a onclick="loadPage(this,'darkmode.html')">
-      <i class="bi bi-diagram-3"></i> DARK MODE
+    <a onclick="loadPage(this,'sitedown.html')">
+      <i class="bi bi-diagram-3"></i> SITE DOWN
     </a>
 
     <div class="footer">AMSProd</div>
