--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@ iframe{
       <i class="bi bi-diagram-3"></i> SITE DOWN
     </a>
 
+    <a onclick="loadPage(this,'summary.html')">
+      <i class="bi bi-graph-up"></i> SUMMARY
+    </a>
+
     <div class="footer">AMSProd</div>
   </div>
 
