--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@ iframe{
       <i class="bi bi-graph-up"></i> SUMMARY
     </a>
 
+    <a onclick="loadPage(this,'siteinfo.html')">
+      <i class="bi bi-graph-up"></i> SITE INFO
+    </a>
+    
     <div class="footer">AMSProd</div>
   </div>
 
