--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ iframe{
     </a>
 
     <a onclick="loadPage(this,'siteinfo.html')">
-      <i class="bi bi-graph-up"></i> SITE INFO
+      <i class="bi bi-info-circle-fill"></i> SITE INFO
     </a>
     
     <div class="footer">AMSProd</div>
