--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@ input:checked + .slider:before {
     </div>
     
     <div class="footer">
-      <div>AMSProd © 2023</div>
+      <div>aMs©2026</div>
       <div style="font-size: 0.7rem; margin-top: 4px; opacity: 0.7;">v2.1.0</div>
     </div>
   </div>
