--- a/celldown.html
+++ b/celldown.html
@@ -245,7 +245,7 @@ body {
   box-shadow: 0 4px 12px rgba(0,0,0,0.15);
 }
 
-#totalAlarm, #uniqueSite, #aging1, #aging3, #aging4 {
+#totalCelldown, #uniqueSite, #aging1, #aging3, #aging4 {
   font-family: var(--font-plus-jakarta);
   font-weight: 800;
   color: #1e293b;
@@ -353,11 +353,9 @@ body {
     <div class="card card-summary p-4">
       <div class="d-flex justify-content-between align-items-center">
         <span style="font-family: 'Plus Jakarta Sans', sans-serif; font-weight: 600; color: #4b5563;">
-          <i class="fas fa-bell me-2 text-primary"></i>Total Alarms
-        </span>
-        <span class="badge bg-primary">CELL UNAVAILABLE</span>
+          <i class="fas fa-satellite-dish me-2 text-primary"></i>Total Celldown
       </div>
-      <h3 id="totalAlarm" class="mt-3">0</h3>
+      <h3 id="totalCelldown" class="mt-3">0</h3>
     </div>
   </div>
   <div class="col-md-3">
@@ -605,8 +603,15 @@ function render() {
   // Initialize counters
   let d1 = 0, d3 = 0, d4 = 0;
   
+  // Hitung total cell count
+  let totalCellCount = 0;
+  
   filteredData.forEach(item => {
     const tr = document.createElement("tr");
+    
+    // Tambahkan ke total cell count
+    const cellCount = parseInt(item["Alarm Count"]) || 0;
+    totalCellCount += cellCount;
     
     // Update aging counters
     if (item._agingDays <= 1) d1++;
@@ -630,10 +635,10 @@ function render() {
     tbody.appendChild(tr);
   });
   
-  // Update summary
+  // Update summary dengan total cell count
   const total = filteredData.length;
   const uniqueSites = new Set(filteredData.map(d => d["SITE ID"]).filter(Boolean)).size;
-  updateSummary(total, uniqueSites, d1, d3, d4);
+  updateSummary(total, uniqueSites, d1, d3, d4, totalCellCount);
 }
 
 function formatDateTime(datetimeStr) {
@@ -671,8 +676,8 @@ function getAgingBadge(days) {
   return `<span class="badge ${badgeClass} status-badge">${text}</span>`;
 }
 
-function updateSummary(total, unique, a1, a3, a4) {
-  document.getElementById("totalAlarm").innerText = total;
+function updateSummary(total, unique, a1, a3, a4, totalCellCount) {
+  document.getElementById("totalCelldown").innerText = totalCellCount || 0;
   document.getElementById("uniqueSite").innerText = unique;
   document.getElementById("aging1").innerText = a1;
   document.getElementById("aging3").innerText = a3;
