--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@ input:checked + .slider:before {
         <span>VIP ALARM</span>
       </a>
 
-      <a onclick="loadPage(this,'celldown.html')">
+      <a onclick="loadPage(this,'MAP.html')">
         <i class="bi bi-wifi-off"></i>
         <span>CELL DOWN</span>
       </a>
