--- a/map_celldown.html
+++ b/map_celldown.html
@@ -624,7 +624,7 @@ body {
       
       <div class="d-flex justify-content-between align-items-center mb-3">
         <h4 class="m-0" style="font-family: var(--font-plus-jakarta); font-weight: 600;">
-          <i class="fas fa-map-marked-alt me-2"></i>MAP Site Location (Jawa Barat Area Only)
+          <i class="fas fa-map-marked-alt me-2"></i>MAP Site Location
         </h4>
         <div class="d-flex align-items-center">
           <span class="badge bg-info me-3" id="siteCount">Loading sites...</span>
