--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@ input:checked + .slider:before {
         <span>CELL DOWN</span>
       </a>
 
-      <a onclick="loadPage(this,'sitedown.html')">
+      <a onclick="loadPage(this,'sitedown_map.html')">
         <i class="bi bi-diagram-3-fill"></i>
         <span>SITE DOWN</span>
       </a>
