--- a/index.html
+++ b/index.html
@@ -583,6 +583,11 @@ input:checked + .slider:before {
         <span>SUMMARY</span>
       </a>
 
+            <a onclick="loadPage(this,'license.html')">
+        <i class="bi bi-info-circle-fill"></i>
+        <span>LICENSE</span>
+      </a>
+
       <a onclick="loadPage(this,'siteinfo.html')">
         <i class="bi bi-info-circle-fill"></i>
         <span>SITE INFO</span>
