Update CSV URL in license.html

--- a/license.html
+++ b/license.html
@@ -1357,8 +1357,7 @@ body {
 
 <script>
 // URL CSV dari Google Sheets
-const CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vReYyDGCMuGVv6quqOtRns55K-nHRF9Jc_9qmN9tNHACirvFr7YLPN3ZR3voorWD0opy7f1GflJ9eEC/pub?gid=2106442205&single=true&output=csv";
-
+const CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vReYyDGCMuGVv6quqOtRns55K-nHRF9Jc_9qmN9tNHACirvFr7YLPN3ZR3voorWD0opy7f1GflJ9eEC/pub?gid=771452700&single=true&output=csv"
 let rawData = [];
 let filteredData = [];
 let sortDir = {};
