--- a/license.html
+++ b/license.html
@@ -331,7 +331,7 @@ body {
 }
 
 /* ============================================
-   FILTER & DISTRIBUTION SECTION - MODIFIED HEIGHTS
+   FILTER & DISTRIBUTION SECTION - SAMA TINGGI
    ============================================ */
 .filter-distribution-section {
   margin-bottom: 2rem;
@@ -343,12 +343,12 @@ body {
   flex-wrap: wrap;
 }
 
-/* FILTER CARD - DIPERKECIL (380px) */
+/* FILTER CARD - SAMA TINGGI DENGAN DISTRIBUTION (480px) */
 .filter-distribution-row > .filter-col {
   flex: 1;
   min-width: 300px;
   max-width: 380px; /* Lebar maksimum untuk filter */
-  height: 380px; /* Tinggi diperkecil */
+  height: 480px; /* TINGGI DISAMAKAN dengan distribution */
   display: flex;
   flex-direction: column;
 }
@@ -909,11 +909,11 @@ body {
   }
   
   .filter-distribution-row > .filter-col {
-    height: 380px;
+    height: 480px; /* Tetap sama tinggi */
   }
   
   .filter-distribution-row > .distribution-col {
-    height: 400px;
+    height: 480px; /* Tetap sama tinggi */
     margin-top: 1rem;
   }
   
@@ -1354,10 +1354,10 @@ body {
   </div>
 </div>
 
-<!-- FILTER AND DISTRIBUTION SECTION - MODIFIED SIZES -->
+<!-- FILTER AND DISTRIBUTION SECTION - SAMA TINGGI -->
 <div class="filter-distribution-section">
   <div class="filter-distribution-row">
-    <!-- FILTER CARD - DIPERKECIL -->
+    <!-- FILTER CARD - SAMA TINGGI DENGAN DISTRIBUTION -->
     <div class="filter-col">
       <div class="filter-card">
         <div class="filter-header">
@@ -1410,7 +1410,7 @@ body {
       </div>
     </div>
     
-    <!-- ALARM DISTRIBUTION CARD - DIPERBESAR -->
+    <!-- ALARM DISTRIBUTION CARD - SAMA TINGGI DENGAN FILTER -->
     <div class="distribution-col">
       <div class="distribution-card">
         <div class="distribution-content">
